--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding:0;
 }
 h1 {
-  font-size: 36px;
+  font-size: 84px;
   color: green;
   font-style: Arial;
   border: 5px solid blue;
@@ -12,16 +12,21 @@ h1 {
 
 .food{
   font-size: 18px;
-  color: rgb(255, 0, 10, .07);
+  color: #42f4e5;
   font-style: italic, sans-serif;
-  border: 2px solid #FFF;
-  height: 100;
-  border-radius: 100%;
-  margin: 10px;
-  padding: 10px, 5px;
+
 
   }
   li{
     display:inline-block;
-    
+
+  }
+  p{
+    height: 200%;
+    width:100%;
+    border: 2px solid #FFF;
+    border-radius: 100%;
+    margin: 10px;
+    padding: 10px, 5px;
+
   }
