--- a/style.css
+++ b/style.css
@@ -4,16 +4,18 @@
 }
 h1 {
   font-size: 84px;
-  color: green;
-  font-style: Arial;
-  border: 5px solid blue;
+  color: #0e4f59;
+  font-style: helvetica;
+  border: 5px dash blue;
   border-radius: 10px;
+  border-width: 10px;
+  border-height:20px;
   }
 
-.food{
+.monologue{
   font-size: 18px;
   color: #42f4e5;
-  font-style: italic, sans-serif;
+  font-style: italic helvetica;
 
 
   }
@@ -21,10 +23,10 @@ h1 {
     display:inline-block;
 
   }
-  p{
+  p {
     height: 200%;
-    width:100%;
-    border: 2px solid #FFF;
+    width:150%;
+    border: 2px solid black;
     border-radius: 100%;
     margin: 10px;
     padding: 10px, 5px;
