--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1 {
   font-size: 84px;
   color: #0e4f59;
   font-style: helvetica;
-  border: 5px dash blue;
+  border: 5px solid #6a767a;
   border-radius: 10px;
   border-width: 10px;
   border-height:20px;
