--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
   margin:0;
-  padding:0;
+  padding:5px
+  box-sizing:border-box;
 }
 h1 {
   font-size: 84px;
@@ -10,6 +11,8 @@ h1 {
   border-radius: 10px;
   border-width: 10px;
   border-height:20px;
+  background-image: url(/Users/katherinecollins/Desktop/cinna site/cinnalayingdown.jpg)
+  background-size:cover;
   }
 
 .monologue{
@@ -21,6 +24,16 @@ h1 {
   }
   li{
     display:inline-block;
+    font-size: 25px;
+    font-style: helvetica;
+    height:30px;
+    width:50px;
+    padding:5px
+    margin:10px;
+    background-image:
+    -webkit-linear-gradient(#666CCC, #BC1324);
+
+
 
   }
   p {
