--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
   border-radius: 10px;
   border-width: 10px;
   border-height:20px;
-  background-image: url(/Users/katherinecollins/Desktop/cinna site/cinnalayingdown.jpg)
+  background-image: url("https://s3.amazonaws.com/cinna/cinnalayingdown.jpg");
   background-size:cover;
   }
 
@@ -23,7 +23,7 @@ h1 {
 
   }
   li{
-    display:inline-block;
+    display:block;
     font-size: 25px;
     font-style: helvetica;
     padding:5px
@@ -41,7 +41,7 @@ h1 {
     border: 2px solid black;
     border-radius: 20px;
     margin: 10px;
-    padding: 10px, 5px;
+    padding: 20px 20px;
     overflow: scroll;
 
 
