--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ h1 {
   border-height:20px;
   background-image: url("https://s3.amazonaws.com/cinna/cinnalayingdown.jpg");
   background-size:cover;
+  height:200px;
+  width:300px;
   }
 
 .monologue{
