--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
 
   }
   li{
-    display:block;
+    display:inline-block;
     font-size: 25px;
     font-style: helvetica;
     padding:5px
