--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
   border-height:20px;
   background-image: url("https://s3.amazonaws.com/cinna/cinnalayingdown.jpg");
   background-size:cover;
-  height:600%;
+  height:400px%;
   width:400%;
   }
 
