--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ h1 {
   border-height:20px;
   background-image: url("https://s3.amazonaws.com/cinna/cinnalayingdown.jpg");
   background-size:cover;
-  height:400px%;
-  width:400%;
+  height:400px;
+  width:400px;
   }
 
 h2{
