--- a/style.css
+++ b/style.css
@@ -20,10 +20,8 @@ h1 {
   border-radius: 10px;
   border-width: 10px;
   border-height:20px;
-  background-image: url("https://s3.amazonaws.com/cinna/cinnalayingdown.jpg");
-  background-size:cover;
-  height:400px;
-  width:400px;
+  height:90px;
+  width:180px;
   }
 
 h2{
@@ -38,8 +36,8 @@ h2{
   font-style:  helvetica;
   }
 
-  li{
-    display:block;
+  .row{
+    display:inline-block;
     font-size: 25px;
     font-style: helvetica;
     padding:5px
@@ -54,11 +52,31 @@ h2{
     align-items: center;
     background-size: cover;
     color: #ffffff;
-    height: 500px;
+    height: 700px;
     text-shadow: 0.25px 0.25px 0.25px #000000;
     background-image: url("https://s3.amazonaws.com/cinna/cinnalayingdown.jpg");
   }
 <! makes the button go up and down!>
   .contact-btn a:active {
   top:2px;
+}
+
+header {
+  padding: 20px 0;
+}
+
+header .row,
+footer .row {
+  display: flex;
+  align-items: center;
+}
+
+header h1 {
+  font-weight: 700;
+  margin: 0;
+}
+
+header nav {
+  display: flex;
+  justify-content: flex-end;
 }
