--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ h2{
     font-size: 25px;
     font-style: helvetica;
     padding:5px
-    margin:10px;
+    margin-top: 50px;
+    margin-bottom:75px;
     background-image:
     -webkit-linear-gradient(#666CCC, #BC1324);
     background-size:cover
